--- a/client/src/styles/bookingDateConfirmation.scss
+++ b/client/src/styles/bookingDateConfirmation.scss
@@ -69,6 +69,10 @@
                 font-size: 1.2rem;
                 border: none;
                 outline: none;
+                &:hover{
+                    cursor: pointer;
+                    opacity: 0.8;
+                }
             }
         }
     }
